# pumpfun-sniper

./: .env.example  .gitignore  Cargo.toml  TRADING_SESSION_DOCUMENTATION.md  config.toml
credentials/: README.md  wallets.json
credentials/hot-trading/: README.md
credentials/shredstream/: README.md  generate-keypair.mjs
credentials/vault/: README.md
scripts/: add_dexscreener_mod.ps1  add_hotscan_cmd.ps1  add_hotscan_handler.ps1  add_hotscan_impl.ps1  add_peak_tracking.ps1  add_trailing_config.ps1  add_trailing_stop.ps1  add_trailing_stop_logic.ps1  add_trailing_toml.ps1  check_boosts.js  check_token22.ps1  check_tx.ps1  fix_all_positions.ps1  fix_compilation.ps1  fix_data_driven_entry.ps1  fix_data_driven_v2.ps1  fix_holder_calc.ps1  fix_holder_race.ps1  fix_hotscan_errors.ps1  fix_newlines.ps1  fix_position_init.ps1  fix_positions_v2.ps1  full_scanner.js  hot_scan.js  insert_holder_code.js  money_flow.js  monitor_positions.js  quick_buy.js  quick_sell.js  scan_hot.js  sign_and_submit.js  whale_tracker.js
src/: config.rs  dexscreener.rs  error.rs  lib.rs  main.rs
src/cli/: commands.rs
src/filter/: bundled_detection.rs  enrichment.rs  helius.rs  holder_watcher.rs  kill_switch.rs  mod.rs  momentum.rs  momentum.rs.backup  token_filter.rs  types.rs  wallet_tracker.rs
src/filter/adaptive/: config.rs  mod.rs
src/filter/cache/: mod.rs
src/filter/scoring/: mod.rs
src/filter/signals/: early_momentum.rs  metadata.rs  mod.rs  smart_money.rs  wallet_behavior.rs
src/filter/smart_money/: alpha_score.rs  clustering.rs  mod.rs  wallet_profiler.rs
src/position/: auto_sell.rs  manager.rs  mod.rs  price_feed.rs
src/pump/: accounts.rs  instruction.rs  mint.rs  mod.rs  price.rs  program.rs
src/strategy/: arbitrator.rs  chain_health.rs  creator_privileges.rs  delta_tracker.rs  engine.rs  execution_feedback.rs  exit_manager.rs  fatal_risk.rs  liquidity.rs  mod.rs  portfolio_risk.rs  price_action.rs  randomization.rs  regime.rs  sizing.rs  types.rs
src/strategy/tactics/: frontrun.rs  mod.rs  piggyback.rs  rug_predict.rs
src/stream/: backpressure.rs  decoder.rs  mod.rs  pumpportal.rs  shredstream.rs
src/trading/: jito.rs  mod.rs  pumpportal_api.rs  simulation.rs  tips.rs  transaction.rs
src/wallet/: advisor.rs  credentials.rs  extractor.rs  manager.rs  mod.rs  multi_wallet.rs  safety.rs  transfer.rs  types.rs
